@@ -1,3 +1,6 @@
+- Unreleased
+	* Specify multiple remotes with `--remotes "host2 1194 tcp","host3 1195 udp"` flag.
+
 = 0.4.2 / 2014-07-05
 	* Bugfix: Default catch-all rule should be 'Ignore', any other option does not make sense.
 
